--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     ext.support_library_version = '27.1.0'
+    ext.arch_lifecycle_version = '1.1.1'
+
     repositories {
         google()
         jcenter()
